--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
-   <link rel="icon" href="C:\Users\Administrator\Desktop\madera-boot\img\logo.ico">
+   <link rel="icon" href="img/logo.ico">
 </head>
 
 <body>
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-       <a class="navbar-brand" href=""> <img src="C:\Users\Administrator\Desktop\madera-boot\img\logo.png" alt="" class="log"></a>
+       <a class="navbar-brand" href=""> <img src="img/logo.png" alt="" class="log"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
       </nav>
     </header>
     <div class="card bg-dark text-white " id="inicio">
-      <img src="C:\Users\Administrator\Desktop\madera-boot\img\car-uno.jpg" class="card-img imagen-fondo" alt="...">
+      <img src="img/car-uno.jpg" class="card-img imagen-fondo" alt="...">
       <div class="card-img-overlay form-cotiza">
         <h class="card-title">PanaWood</h>
         <p class="card-text">Los Muebles mas modernos de Panama a tu alcance</p>
@@ -67,7 +67,7 @@
       <h2 class="display-4 text-center" id="productos">Productos</h2>
         <div class="card-group">
             <div class="card texto">
-              <img src="C:\Users\Administrator\Desktop\madera-boot\img\wood-cinco.png" class="card-img-top" alt="...">
+              <img src="img/wood-cinco.png" class="card-img-top" alt="...">
               <div class="card-body texto">
                 <a href=""><h5 class="card-title">Muebles estilo industrial</h5></a><h5 class="card-title"></h5>
                 <p class="card-text">Tenemos una variedad de muebles estilo industrial para oficinas, hogar e instalaciones modernas listas para entregar. </p>
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="card texto">
-              <img src="C:\Users\Administrator\Desktop\madera-boot\img\wood-dos.jpg" class="card-img-top" alt="...">
+              <img src="img/wood-dos.jpg" class="card-img-top" alt="...">
               <div class="card-body texto">
                 <a href=""><h5 class="card-title">Muebles estilo tradicional</h5></a><h5 class="card-title"></h5>
                 <p class="card-text">los muebles tradicionales nunca pasan de moda y en PanaWood sabemos que quieres uno de estos, por eso lo diseñamos y confeccionamos a medida para usted.</p>
@@ -83,7 +83,7 @@
               </div>
             </div>
             <div class="card texto">
-              <img src="C:\Users\Administrator\Desktop\madera-boot\img\wood-cuatro.jpg" class="card-img-top" alt="...">
+              <img src="img/wood-cuatro.jpg" class="card-img-top" alt="...">
               <div class="card-body texto">
                 <a href=""><h5 class="card-title">Muebles estilo minimalista</h5></a><h5 class="card-title"></h5>
                 <p class="card-text">En PanaWood tambien pensamos en ti que eliges lo minimalista y quieres un estilo mas reservado, lo creamos y ajustamos a su medida.</p>
@@ -100,7 +100,7 @@
               <div class="card-deck">
                 <div class="card ">
                   <div class="inner">
-                     <img src="C:\Users\Administrator\Desktop\madera-boot\img\diseñamos.jpg" class="card-img-top" alt="...">
+                     <img src="img/diseñamos.jpg" class="card-img-top" alt="...">
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">diseño a la medida</h5>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="card">
                   <div class="inner">
-                    <img src="C:\Users\Administrator\Desktop\madera-boot\img\llevamos.jpg" class="card-img-top" alt="...">
+                    <img src="img/llevamos.jpg" class="card-img-top" alt="...">
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">Envio a nivel nacional</h5>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="card">
                   <div class="inner">
-                    <img src="C:\Users\Administrator\Desktop\madera-boot\img\industrial.jpg" class="card-img-top" alt="...">
+                    <img src="img/industrial.jpg" class="card-img-top" alt="...">
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">muebles para negocios</h5>
@@ -135,7 +135,7 @@
      
           
           <div class="card col-6 texto" style="width: 18rem;">
-            <img src="C:\Users\Administrator\Desktop\madera-boot\img\recicla-uno.jpg" class="card-img-top " alt="...">
+            <img src="img/recicla-uno.jpg" class="card-img-top " alt="...">
             <div class="card-body">
               <a href=""><h5 class="card-title">RECICLA</h5></a><h5 class="card-title"></h5>
               <p class="card-text">En PanaWood nos preocupamos por la naturaleza y nos encargamos de utilzar madera y plantar nuevos arboles si quieres saber mas de este proyecto mira la descripcion</p>
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="card col-6 texto" style="width: 18rem;">
-            <img src="C:\Users\Administrator\Desktop\madera-boot\img\cocina.jpg" class="card-img-top" alt="...">
+            <img src="img/cocina.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <a href=""><h5 class="card-title">COCINA</h5></a><h5 class="card-title"></h5>
               <p class="card-text">Quieres saber mas sobre como diseñamos tu cocina y a la vez unos consejos para mejorar ese espacio que tanto anhelas, bueno da click en la descripcion </p>
@@ -160,7 +160,7 @@
             <div class="row">
                <div class="col-3 footer-info">
                   <h3>nosotros</h3>
-                  <img src="C:\Users\Administrator\Desktop\madera-boot\img\logo.png" alt="">
+                  <img src="img/logo.png" alt="">
                    <p>
                    </p>
                </div>
