--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="card-img-overlay form-cotiza">
         <h class="card-title">PanaWood</h>
         <p class="card-text">Los Muebles mas modernos de Panama a tu alcance</p>
-        <button type="button" class="btn btn-outline-light">COTIZA</button>
+        <button type="button" class="btn btn-outline-light"><a href="https://api.whatsapp.com/send?phone=50763902315&text=Hola%20Bienvenidos%20A%20Panawood,%20escribenos%20sobre%20el%20producto%20que%20deseas">COTIZA</a></button>
         
       </div>
     </div>
@@ -194,10 +194,10 @@
                     Panama <br>
                     Panama, La chorrera <br>
                     <strong>Telefono:</strong> +507 63902315 <br>
-                    <strong>Email:</strong> Leaxavier2014@gmail.com <br>
+                    <strong>Email:</strong> panawood@criptext.com <br>
                    </p>
                     <div class="social links">
-                    <a href="" class="instragram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/muebles_de_maderapty/?/" class="instragram"><i class="fab fa-instagram"></i></a>
                     <a href="" class="facebook"><i class="fab fa-facebook"></i></a>
                     <a href="" class="twitter"><i class="fab fa-twitter"></i></a>
                     <a href="" class="linkedin"><i class="fab fa-linkedin"></i></a>
